--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,14 @@ plugins {
 }
 
 android {
-    compileSdkVersion 34
+    compileSdkVersion 33
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "io.akndmr.uglytooltip"
         minSdkVersion 19
-        //noinspection EditedTargetSdkVersion
-        targetSdkVersion 34
+        //noinspection OldTargetApi
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0.1"
 
